--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ table th {
         border: 2px solid #3498db;
         padding: 10px;
         width: 100%;
+        order : 2;
     }
 
     .profile-img {
