--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     background-color: #fff;
     border-radius: 8px;
     margin-top: 20px;
+    box-shadow: 0 0 20px 10px rgba(67, 80, 250, 0.3);
 }
 
 #title {
@@ -22,6 +23,7 @@ body {
     font-size: 2.5em;
     margin-bottom: 20px;
     border: 4px solid #3498db;
+    background-color: #84e1ef;
 }
 
 
@@ -79,27 +81,6 @@ table th {
     color: #fff;
 }
 
-.text-section {
-    margin-top: 20px;
-    padding: 20px;
-    background-color: #D3D3D3;
-    border-radius: 8px;
-    
-}
-#button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #3498db;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 4px;
-}
-
-#text-input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
 
 @media (max-width: 768px) {
     .container {
@@ -145,9 +126,5 @@ table th {
 
     table {
         font-size: 0.9em; 
-    }
-
-    .text-section {
-        padding: 15px; 
     }
 }
