--- a/style.css
+++ b/style.css
@@ -81,6 +81,42 @@ table th {
     color: #fff;
 }
 
+.text-section {
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #D3D3D3;
+    border-radius: 8px;
+
+}
+#button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #3498db;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 4px;
+}
+#text-input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.contact-images {
+    display: flex;
+    gap: 20px; 
+    margin-top: 20px; 
+}
+
+.contact-icon {
+    width: 50px; 
+    height: auto;
+    transition: transform 0.3s ease; 
+}
+
+.contact-icon:hover {
+    transform: scale(1.1); 
+}
 
 @media (max-width: 768px) {
     .container {
