--- a/style.css
+++ b/style.css
@@ -81,13 +81,6 @@ table th {
     color: #fff;
 }
 
-.text-section {
-    margin-top: 20px;
-    padding: 20px;
-    background-color: #D3D3D3;
-    border-radius: 8px;
-
-}
 #button {
     display: inline-block;
     padding: 10px 20px;
@@ -96,14 +89,29 @@ table th {
     text-decoration: none;
     border-radius: 4px;
 }
+
 #text-input {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
+
+.center-container {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    gap: 10px; 
+}
+
+.text-section {
+    margin-top: 20px; 
+    text-align: center;
+}
+
 .contact-images {
     display: flex;
+    justify-content: center; 
     gap: 20px; 
     margin-top: 20px; 
 }
@@ -116,6 +124,10 @@ table th {
 
 .contact-icon:hover {
     transform: scale(1.1); 
+}
+
+.contact {
+    text-align: center; 
 }
 
 @media (max-width: 768px) {
